--- a/deno.json
+++ b/deno.json
@@ -6,7 +6,10 @@
     "lume": "echo \"import 'lume/cli.ts'\" | deno run -A -",
     "build": "deno task lume",
     "serve": "deno task lume -s",
-    "deploy": "deno task build && echo \"\" | deno run -A npm:@divriots/jampack _site && rsync --delete -avz _site/ SERVER:sites/example.org"
+    "deploy": "deno task build && echo \"\" | deno run -A npm:@divriots/jampack _site && rsync --delete -avz _site/ SERVER:sites/example.org",
+    "fmt": "deno task dprint fmt",
+    "fmt:check": "deno task dprint check",
+    "dprint": "deno run -A npm:dprint"
   },
   "compilerOptions": {
     "types": [
